# SpriterPlusPlusQt

./: .gitmodules  CMakeLists.txt  README.md
cmake/: QtCreatorResources.cmake
example/: CMakeLists.txt  main.cpp  main.qml
example/GreyGuyAtlas/: GreyGuy.scml  GreyGuy.scml.bak  GreyGuy_arms.json  GreyGuy_arms.json.bak  GreyGuy_feet.json  GreyGuy_feet.json.bak  GreyGuy_hands.json  GreyGuy_hands.json.bak  GreyGuy_head.json  GreyGuy_head.json.bak  GreyGuy_legs.json  GreyGuy_legs.json.bak  GreyGuy_torso.json  GreyGuy_torso.json.bak
qt/: CMakeLists.txt  qentityinstance.cpp  qentityinstance.h  qsgspriterbase.cpp  qsgspriterbase.h  qsgspriterbonenode.cpp  qsgspriterbonenode.h  qsgspriternode.cpp  qsgspriternode.h  qsgspriterobjectnode.cpp  qsgspriterobjectnode.h  qsgspriterpointnode.cpp  qsgspriterpointnode.h  qsprintermodel.cpp  qsprintermodel.h  qtatlasfile.cpp  qtatlasfile.h  qtboneinstanceinfo.cpp  qtboneinstanceinfo.h  qtboxinstanceinfo.cpp  qtboxinstanceinfo.h  qtentityinstance.cpp  qtentityinstance.h  qtfilefactory.cpp  qtfilefactory.h  qtimagefile.cpp  qtimagefile.h  qtobjectfactory.cpp  qtobjectfactory.h  qtpointinstanceinfo.cpp  qtpointinstanceinfo.h  qtsoundfile.cpp  qtsoundfile.h  qtsoundobjectinforeference.cpp  qtsoundobjectinforeference.h  qtspritermodel.cpp  qtspritermodel.h  spriterplugin.cpp
qt/data/: CMakeLists.txt  qmldir
qtdocumentwrapper/: CMakeLists.txt  qtjsonspriterfileattributewrapper.cpp  qtjsonspriterfileattributewrapper.h  qtjsonspriterfiledocumentwrapper.cpp  qtjsonspriterfiledocumentwrapper.h  qtjsonspriterfileelementwrapper.cpp  qtjsonspriterfileelementwrapper.h  qtspriterfileattributewrapper.cpp  qtspriterfileattributewrapper.h  qtspriterfiledocumentwrapper.cpp  qtspriterfiledocumentwrapper.h  qtspriterfileelementwrapper.cpp  qtspriterfileelementwrapper.h  qtxmlspriterfileattributewrapper.cpp  qtxmlspriterfileattributewrapper.h  qtxmlspriterfiledocumentwrapper.cpp  qtxmlspriterfiledocumentwrapper.h  qtxmlspriterfileelementwrapper.cpp  qtxmlspriterfileelementwrapper.h
